--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 							<div class="inner">
 								<h1>Huntington Beach Massage | Massage Bliss by Jerica</h1>
 								<p>In-studio & mobile services</p>
-								<a href=“tel:909-747-2735”>Text (909) 747-2735</a>
+							<a style="color: blue;" href="sms:+19097472735&body=Hi, My name is _____ , I saw your website..."><strong>Text Me</strong></a>
+							<a>(909) 747-2735</a>
 							</div>
 						</div>
 						<nav>
